--- a/shop/components/Header/header.module.css
+++ b/shop/components/Header/header.module.css
@@ -4,6 +4,34 @@
     align-items: center;
     border: 1 px solid black;
     background-color: aqua;
-    width: 100%;
+    width: 90%;
     height: 15vh;
+    padding: 0 20px;
 }
+.logo {
+    text-decoration: none;
+}
+.cart_button_link {
+    width: 10%;
+    height: 50%;
+}
+.cart_button {
+    display: inline-flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 1.5px;
+    background-color: rgb(115, 105, 193);
+    border: none;
+    border-radius: 30px;
+    font-size: 20px;
+    color: azure;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    transition: all 50ms ease-in-out;
+ }
+ .cart_button:active {
+    background-color: rgb(85, 74, 171);
+    transform: translateY(1px);
+  }
