--- a/shop/src/app/globals.css
+++ b/shop/src/app/globals.css
@@ -1,3 +1,12 @@
-.body__layout {
+.body_layout {
     font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.body_page {
+ width: 90%;
+ height: 100%;
+ background-color: bisque;
 }
