--- a/shop/components/Header/header.module.css
+++ b/shop/components/Header/header.module.css
@@ -1,12 +1,14 @@
 .header {
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1 px solid black;
     background-color: aqua;
-    width: 90%;
-    height: 15vh;
+    width: 89.78%;
+    margin: 0 auto;
+    height: 15%;
     padding: 0 20px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 .logo {
     text-decoration: none;
