--- a/shop/src/app/globals.css
+++ b/shop/src/app/globals.css
@@ -1,12 +1,21 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+
 .body_layout {
     font-size: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+ width: 100%;
+ min-height: 100vh;
+ background-color: bisque;
+ margin-top: 40px;
 }
 
-.body_page {
- width: 90%;
- height: 100%;
- background-color: bisque;
-}
+
+
