--- a/shop/components/Header/header.module.css
+++ b/shop/components/Header/header.module.css
@@ -2,38 +2,45 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: aqua;
-    width: 89.78%;
-    margin: 0 auto;
-    height: 15%;
+    width: 90%;
+    height: 20vh;
+    min-height: max-content;
     padding: 0 20px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    background-color: #FFFFFF;
 }
 .logo {
     text-decoration: none;
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
 }
-.cart_button_link {
-    width: 10%;
-    height: 50%;
-}
+
 .cart_button {
     display: inline-flex;
     justify-content: center;
     text-align: center;
     align-items: center;
     gap: 1.5px;
-    background-color: rgb(115, 105, 193);
     border: none;
-    border-radius: 30px;
+    border-radius: 20px;
     font-size: 20px;
-    color: azure;
+    color: #424F59;
     cursor: pointer;
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 50px;
+    min-height: max-content;
     transition: all 50ms ease-in-out;
  }
+ 
+ .cart_button svg {
+opacity: 0.5;
+
+}
  .cart_button:active {
-    background-color: rgb(85, 74, 171);
+    background-color: #424F59;
+    color: #FFFFFF;
     transform: translateY(1px);
+    border: none;
   }
