--- a/shop/src/app/footer/footer.module.css
+++ b/shop/src/app/footer/footer.module.css
@@ -1,9 +1,10 @@
 .footer_wrap {
-    background-color: rgb(122, 15, 83);
-    border: 1px solid;
-    width: 92.7%;
+    background-color: #424F59;
+    width: 90%;
     height: 30%;
-    margin: 0 auto;
+    padding: 0 20px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 
 .footer_wrap div {
