--- a/shop/src/app/products/products.module.css
+++ b/shop/src/app/products/products.module.css
@@ -1,7 +1,19 @@
 .products {
-    background-color: rgb(47, 189, 78);
-    border: 1px solid;
-    width: 92.7%;
+    display: flex;
+    background-color: #FFFFFF;
+    width: 90%;
     height: 100%;
-    margin: 0 auto;
+    min-height: 800px;
+    padding: 40px 20px;
+}
+.styles.products__filters_section {
+    min-width: 200px;
+}
+
+.products__bags_section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-left: 30px;
 }
