--- a/shop/components/Header/header.module.css
+++ b/shop/components/Header/header.module.css
@@ -18,29 +18,17 @@
 }
 
 .cart_button {
-    display: inline-flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    gap: 1.5px;
-    border: none;
-    border-radius: 20px;
-    font-size: 20px;
-    color: #424F59;
-    cursor: pointer;
-    width: 100px;
+    width: 50px;
     height: 50px;
-    min-height: max-content;
-    transition: all 50ms ease-in-out;
+    transition: all 200ms ease-in-out;
  }
  
- .cart_button svg {
-opacity: 0.5;
-
-}
  .cart_button:active {
     background-color: #424F59;
     color: #FFFFFF;
     transform: translateY(1px);
     border: none;
+  }
+ .cart_button:hover {
+   cursor: pointer;
   }
