--- a/shop/src/app/footer/footer.module.css
+++ b/shop/src/app/footer/footer.module.css
@@ -1,10 +1,12 @@
 .footer_wrap {
-    background-color: #424F59;
+    /* background-color: #424F59; */
     width: 90%;
     height: 30%;
     padding: 0 20px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
+    border-top: 20px solid rgba(127, 255, 212, 0.3);
+    background-color: #FFFFFF;
 }
 
 .footer_wrap div {
