--- a/shop/src/app/slider/slider.module.css
+++ b/shop/src/app/slider/slider.module.css
@@ -19,10 +19,9 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 
 }
 
-
 .slider__next {
     display: flex;
-    /* justify-content: space-around; */
+    gap: 5px;
     border: 1px solid;
     position: relative;
     overflow: hidden;
@@ -33,8 +32,8 @@ border: 1px solid rgba(0, 0, 0, 0.1);
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
 .activeSlide {
-    outline: 3px solid green;
-    transform: translateX(0);
+    border: 3px solid green;
+    /* transform: translateX(0); */
     transition: transform 0.5s;
 }
 .lastSlide {
@@ -45,6 +44,7 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .nextSlide {
     transform: translateX(100%);
+    border: 3px solid rgb(26, 0, 128);
     transition: transform 0.5s;
     /* outline: 3px solid rgb(44, 31, 184); */
 }
