--- a/shop/components/Header/header.module.css
+++ b/shop/components/Header/header.module.css
@@ -11,24 +11,23 @@
     background-color: #FFFFFF;
 }
 .logo {
-    text-decoration: none;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     border-radius: 4px;
 }
 
 .cart_button {
-    width: 50px;
-    height: 50px;
+   width: 40px;
+   height: 40px;
+    border: none;
+    background-color: inherit;
     transition: all 200ms ease-in-out;
+    padding: 0;
  }
  
  .cart_button:active {
-    background-color: #424F59;
-    color: #FFFFFF;
     transform: translateY(1px);
-    border: none;
   }
- .cart_button:hover {
+ .cart_button:hover svg{
    cursor: pointer;
   }
