--- a/shop/src/app/filters/filters.module.css
+++ b/shop/src/app/filters/filters.module.css
@@ -1,5 +1,7 @@
 .filter__wrap {
-    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 250px;
     height: 800px;
-    border: 1px solid;
 }
