--- a/shop/src/app/footer/footer.module.css
+++ b/shop/src/app/footer/footer.module.css
@@ -1,12 +1,66 @@
+
 .footer_wrap {
-    /* background-color: #424F59; */
     width: 90%;
     height: 30%;
     padding: 0 20px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
-    border-top: 20px solid rgba(127, 255, 212, 0.3);
+    border-top: 20px solid #D6D5D3;
     background-color: #FFFFFF;
+    margin-bottom: 20px;
+}
+
+.footer__sections {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    padding: 50px 40px;
+}
+
+.footer__information:not(:nth-child(3)),
+.footer__information:not(:nth-child(4)) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    opacity: 0.5;
+}
+
+.footer__information:nth-child(3),
+.footer__information:nth-child(4) {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    opacity: 0.7;
+}
+
+.footer__information_svg {
+    display: flex;
+    gap: 10px;
+}
+
+.footer__item {
+transition: all 150ms ease-in-out;
+}
+
+.footer__item:hover {
+    text-shadow: 0.5px 0.5px 0px black;
+    background-color: rgba(127, 255, 212, 0.5);
+    border-radius: 50%;
+}
+
+.footer__item:active {
+ transform: translateY(1px);
+}
+
+.footer__information h4{
+   margin-bottom: 2px;
+   font-size: 16px;
+   font-weight: bolder;
+   text-transform: uppercase;
+   text-align: center;
+   opacity: 1;
 }
 
 .footer_wrap div {
