--- a/shop/components/Header/header.module.css
+++ b/shop/components/Header/header.module.css
@@ -21,8 +21,12 @@
    height: 40px;
     border: none;
     background-color: inherit;
-    transition: all 200ms ease-in-out;
+    transition: all 150ms ease-in-out;
     padding: 0;
+ }
+
+.cart_button:hover {
+  transform: translateY(1px);
  }
  
  .cart_button:active {
@@ -31,3 +35,8 @@
  .cart_button:hover svg{
    cursor: pointer;
   }
+.header__right_side {
+  display: flex;
+  gap: 90px;
+  padding-right: 20px;
+}
