--- a/shop/src/app/categories/categories.module.css
+++ b/shop/src/app/categories/categories.module.css
@@ -2,36 +2,58 @@
     background: linear-gradient(#5CC1C1, #096c5d);
     width: 90%;
     min-height: min-content;
-    padding: 0 20px;
     font-size: 70%;
+    padding: 0 20px;
 }
 
 .category__sections {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 60px;
+    /* justify-content: center; */
     list-style: none;
-    border-right: 1px solid;
     align-self: center;
     color: aliceblue;
-
+    border: 1px solid;
 }
 
-.category__sections li:not(:last-child) {
-    border-right: 1px solid white;
-    padding-right: 50px;
-}
-
-.category__sections li:hover {
-    background-color: aqua;
-}
-
-.category__sections li span {
-    display: inline-flex;
+.category__sections li {
+    display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    padding: 10px 0;
+}
+
+.category__link {
+    /* align-items: center; */
+ width: 50%;
+ padding: 10px 0;
+ border-right: 1px solid white;
+ border-left: 1px solid white;
+}
+
+.categry__item li span:not(:last-child) {
+    /* border-right: 1px solid white; */
+}
+
+/* .category__sections li:hover {
+    background-color: aqua;
+    cursor: pointer;
+} */
+
+.category__link span {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
     gap: 10px;
+    border: 2px solid red;
+}
+
+.category__link:hover {
+    background-color: aqua;
+    cursor: pointer;
 }
 
 .categories__icon {
@@ -44,5 +66,5 @@
 
 .category__sections:last-child {
     margin-right: 40px;
-    border-right: none;
+    /* border-right: none; */
 }
