--- a/shop/src/app/categories/categories.module.css
+++ b/shop/src/app/categories/categories.module.css
@@ -1,4 +1,5 @@
 .categories {
+    display: flex;
     background: linear-gradient(#5CC1C1, #096c5d);
     width: 90%;
     min-height: min-content;
@@ -7,13 +8,12 @@
 }
 
 .category__sections {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
     list-style: none;
     align-self: center;
     color: aliceblue;
-    border: 1px solid;
 }
 
 .category__sections li {
@@ -25,21 +25,12 @@
 }
 
 .category__link {
-    /* align-items: center; */
- width: 50%;
- padding: 10px 0;
- border-right: 1px solid white;
- border-left: 1px solid white;
+    width: 80%;
+    padding: 10px 0;
+    border: 1px solid;
+    box-shadow: 1px 1px 1px 0.5px;
+    border-radius: 50%;
 }
-
-.categry__item li span:not(:last-child) {
-    /* border-right: 1px solid white; */
-}
-
-/* .category__sections li:hover {
-    background-color: aqua;
-    cursor: pointer;
-} */
 
 .category__link span {
     display: flex;
@@ -48,12 +39,18 @@
     height: 100%;
     align-items: center;
     gap: 10px;
-    border: 2px solid red;
-}
+    font-style: italic;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);}
 
 .category__link:hover {
-    background-color: aqua;
     cursor: pointer;
+    background: linear-gradient(#5CC1C1, #096c5d);
+}
+
+.category__link:active {
+    cursor: pointer;
+    background: linear-gradient(#5CC1C1, #044037);
 }
 
 .categories__icon {
@@ -63,8 +60,6 @@
     height: 40px;
 }
 
-
 .category__sections:last-child {
     margin-right: 40px;
-    /* border-right: none; */
 }
