--- a/shop/components/ProductItem/productItem.module.css
+++ b/shop/components/ProductItem/productItem.module.css
@@ -1,6 +1,6 @@
 .productItem_wrap {
     display: flex;
-    background-color: #FFFFFF;
+    /* background-color: #FFFFFF; */
     width: 90%;
     height: 100%;
     min-height: 800px;
