--- a/shop/src/app/allProducts/products.module.css
+++ b/shop/src/app/allProducts/products.module.css
@@ -1,10 +1,13 @@
 .products {
     display: flex;
-    background-color: #FFFFFF;
     width: 90%;
     height: 100%;
     min-height: 800px;
     padding: 40px 20px;
+    background-image: url("/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .products__filters_section {
