--- a/shop/src/app/bags/bags.module.css
+++ b/shop/src/app/bags/bags.module.css
@@ -1,7 +1,10 @@
 .bags__wrap {
     display: flex;
-    background-color: #FFFFFF;
-    width: 90%;
+    background-image: url("/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 97%;
     height: 100%;
     min-height: 800px;
     padding: 40px 20px;
