--- a/shop/src/app/categories/categories.module.css
+++ b/shop/src/app/categories/categories.module.css
@@ -1,10 +1,10 @@
 .categories {
     display: flex;
-    background: linear-gradient(#5CC1C1, #096c5d);
-    width: 90%;
+    width: 97%;
     min-height: min-content;
     font-size: 70%;
     padding: 0 20px;
+    background-image: url("/background.jpg");
 }
 
 .category__sections {
@@ -13,7 +13,6 @@
     flex-direction: row;
     list-style: none;
     align-self: center;
-    color: aliceblue;
 }
 
 .category__sections li {
@@ -25,6 +24,8 @@
 }
 
 .category__link {
+    color: #A5D4D9;
+    stroke: #A5D4D9;
     width: 80%;
     padding: 10px 0;
     border: 1px solid;
@@ -41,16 +42,20 @@
     gap: 10px;
     font-style: italic;
     font-weight: bold;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);}
+    color: #055353;
+}
 
 .category__link:hover {
     cursor: pointer;
-    background: linear-gradient(#5CC1C1, #096c5d);
+    /* background: linear-gradient(#5CC1C1, #096c5d); */
+    /* background-color: #A3D4D8; */
+    background: linear-gradient(.25turn, #A3D4D8, rgba(238, 201, 0, 0.4));
+
 }
 
 .category__link:active {
     cursor: pointer;
-    background: linear-gradient(#5CC1C1, #044037);
+    background: linear-gradient(#A3D4D8, #5CC1C1);
 }
 
 .categories__icon {
