--- a/shop/src/app/footer/footer.module.css
+++ b/shop/src/app/footer/footer.module.css
@@ -1,12 +1,13 @@
 .footer_wrap {
-    width: 90%;
+    width: 97%;
     height: 30%;
     padding: 0 20px;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-top: 20px solid #D6D5D3;
-    background-color: #FFFFFF;
     margin-bottom: 20px;
+    background-image: url("/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-top: 1px solid rgba(127, 255, 212, 0.5);
 }
 
 .footer__sections {
