--- a/shop/src/app/globals.css
+++ b/shop/src/app/globals.css
@@ -2,9 +2,10 @@ html,
 body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .body_layout {
@@ -12,8 +13,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    background-color: rgb(214, 213, 211);
     min-height: max-content;
 }
 
@@ -23,6 +22,10 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    background-image: url("/background.jpg");
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;
 }
 
 a {
