--- a/shop/components/Header/header.module.css
+++ b/shop/components/Header/header.module.css
@@ -6,7 +6,7 @@
   min-height: max-content;
   padding: 0 20px;
   box-sizing: border-box;
-  background-image: url("/back4.jpg");
+  background-image: url("/BagsShop/back4.jpg");
   background-size: cover;
   background-position: bottom center;
   background-repeat: no-repeat;
