--- a/shop/src/app/backpacks/backpacks.module.css
+++ b/shop/src/app/backpacks/backpacks.module.css
@@ -1,24 +1,28 @@
 .backpacks_wrap {
     display: flex;
     width: 97%;
-    height: 100%;
-    min-height: 800px;
+    justify-content: flex-start;
+    align-items: baseline;
+    height: max-content;
     padding: 40px 20px;
-    background-image: url("/background.jpg");
+    background-image: url("/BagsShop/background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border: 3px solid red;
+
 }
 
 .backpacks__filters_section {
-    min-width: 200px;
+    /* min-width: 200px; */
 }
 
 .backpacks__bags_section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 20px;
-    margin-left: 30px;
     height: 80%;
+    border: 3px solid rgb(98, 0, 255);
+    width: 100%;
+
 }
