--- a/shop/src/app/bags/bags.module.css
+++ b/shop/src/app/bags/bags.module.css
@@ -1,12 +1,11 @@
 .bags__wrap {
     display: flex;
-    background-image: url("/background.jpg");
+    background-image: url("/BagsShop/background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     width: 97%;
-    height: 100%;
-    min-height: 800px;
+    height: fit-content;
     padding: 40px 20px;
 }
 
