--- a/shop/src/app/categories/categories.module.css
+++ b/shop/src/app/categories/categories.module.css
@@ -4,7 +4,7 @@
     min-height: min-content;
     font-size: 70%;
     padding: 0 20px;
-    background-image: url("/background.jpg");
+    background-image: url("/BagsShop/background.jpg");
 }
 
 .category__sections {
