--- a/shop/src/app/footer/footer.module.css
+++ b/shop/src/app/footer/footer.module.css
@@ -3,7 +3,7 @@
     height: 30%;
     padding: 0 20px;
     margin-bottom: 20px;
-    background-image: url("/background.jpg");
+    background-image: url("/BagsShop/background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
