--- a/shop/src/app/wallets/wallets.module.css
+++ b/shop/src/app/wallets/wallets.module.css
@@ -1,10 +1,11 @@
 .wallets__wrap {
     display: flex;
-    height: 100%;
+    justify-content: flex-start;
+    border: 3px solid red;
+    height: fit-content;
     width: 97%;
-    min-height: 800px;
     padding: 40px 20px;
-    background-image: url("/background.jpg");
+    background-image: url("/BagsShop/background.jpg");
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
