--- a/shop/src/app/bags/bags.module.css
+++ b/shop/src/app/bags/bags.module.css
@@ -4,20 +4,15 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 97%;
+    width: 100%;
     height: fit-content;
-    padding: 40px 20px;
-}
-
-.bags__filters_section {
-    min-width: 200px;
 }
 
 .bags__section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 20px;
-    margin-left: 30px;
-    height: 80%;
+    height: 100%;
+    padding: 0 20px;
+    width: 100%;
 }
