--- a/shop/src/app/globals.css
+++ b/shop/src/app/globals.css
@@ -6,6 +6,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url("/BagsShop/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .body_layout {
@@ -20,11 +24,10 @@ body {
     display: flex;
     width: 100%;
     background-image: url("/BagsShop/background.jpg");
-    background-size: cover; 
-    background-position: center; 
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     gap: 50px;
-    /* border: 1px solid; */
 }
 
 a {
@@ -34,4 +37,13 @@ a {
 
 .aside {
     margin-left: 20px;
+}
+
+.all_products {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+    margin-bottom: 40px;
 }
