--- a/shop/src/app/bags/bags.module.css
+++ b/shop/src/app/bags/bags.module.css
@@ -6,12 +6,13 @@
     background-repeat: no-repeat;
     width: 100%;
     height: fit-content;
+    gap: 40px;
 }
 
 .bags__section {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 20px 40px;
     height: 100%;
     padding: 0 20px;
     width: 100%;
