--- a/shop/src/app/categories/categories.module.css
+++ b/shop/src/app/categories/categories.module.css
@@ -3,7 +3,7 @@
     width: 97%;
     min-height: min-content;
     font-size: 70%;
-    padding: 0 20px 40px 20px; 
+    padding: 40px 20px 40px 20px; 
     background-image: url("/BagsShop/background.jpg");
 }
 
