--- a/shop/src/app/footer/footer.module.css
+++ b/shop/src/app/footer/footer.module.css
@@ -3,6 +3,7 @@
     height: 30%;
     padding: 0 20px;
     margin-bottom: 20px;
+    margin-top: 40px;
     background-image: url("/BagsShop/background.jpg");
     background-size: cover;
     background-position: center;
@@ -24,7 +25,7 @@
     align-items: center;
     gap: 10px;
     font-size: 14px;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .footer__information:nth-child(3),
@@ -46,8 +47,8 @@
 
 .footer__item:hover {
     text-shadow: 0.5px 0.5px 0px black;
-    background-color: rgba(127, 255, 212, 0.5);
-    border-radius: 50%;
+    background-color: #A1D2D8;
+    border-radius: 10%;
 }
 
 .footer__item:active {
