--- a/shop/src/app/Cart/cart.module.css
+++ b/shop/src/app/Cart/cart.module.css
@@ -1,7 +1,8 @@
 .cart {
     width: 90%;
     padding: 20px;
-    background-color: #FFFFFF;
+    background-color: rgba(12, 13, 12, 0.1);
+    border-radius: 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,6 +52,7 @@
     width: 90%;
     gap: 20px;
     font-size: 22px;
+    margin-top: 20px;
 }
 
 .cart__bottom_details {
