--- a/shop/src/app/cartItem/cartItem.module.css
+++ b/shop/src/app/cartItem/cartItem.module.css
@@ -1,12 +1,14 @@
 .cart_item {
     display: flex;
     align-items: center;
+    margin: 40px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .cart_item__img {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     flex: 0.3;
 }
 
