--- a/shop/src/app/globals.css
+++ b/shop/src/app/globals.css
@@ -41,9 +41,9 @@ a {
 
 .all_products {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    width: 100%;
+    width: 80%;
     gap: 20px;
     margin-bottom: 40px;
 }
